--- a/project-example/package.json
+++ b/project-example/package.json
@@ -6,5 +6,8 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.0.1",
     "eslint": "^8.45.0"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
