--- a/project-example/package.json
+++ b/project-example/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "devDependencies": {
-    "@rocketseat/eslint-config": "^2.0.1",
-    "eslint": "^8.45.0"
-  },
+  "devDependencies": {},
   "dependencies": {
     "axios": "^1.4.0"
   }
