--- a/project-example/package.json
+++ b/project-example/package.json
@@ -8,7 +8,8 @@
     "pinst": "^3.0.0"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "chalk": "^5.3.0"
   },
   "scripts": {
     "postinstall": "cd .. && husky install project-example/.husky",
