fix: chalk version change for CommonJS compatibility

--- a/project-example/package.json
+++ b/project-example/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "chalk": "^5.3.0"
+    "chalk": "4.1.2"
   },
   "scripts": {
     "postinstall": "cd .. && husky install project-example/.husky",
