--- a/project-example/package.json
+++ b/project-example/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "chalk": "4.1.2"
+    "chalk": "4.1.2",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "postinstall": "cd .. && husky install project-example/.husky",
