--- a/main/package.json
+++ b/main/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.4",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
@@ -22,6 +23,7 @@
     "lucide-react": "^0.261.0",
     "moment": "^2.29.4",
     "next": "13.4.10",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
