--- a/main/.eslintrc.json
+++ b/main/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["next/core-web-vitals", "@rocketseat/eslint-config/next"]
+  "extends": ["next/core-web-vitals", "@rocketseat/eslint-config/next"],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off"
+  },
+  "ignorePatterns": [
+    "src/app/globals.css"
+  ]
 }
