--- a/project-example/package.json
+++ b/project-example/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "chalk": "4.1.2",
+    "dotenv": "^16.3.1",
     "zod": "^3.21.4"
   },
   "scripts": {
